fix topbar spacing and pagination

--- a/app/assets/stylesheets/_alert-box.scss
+++ b/app/assets/stylesheets/_alert-box.scss
@@ -1,3 +1,17 @@
-.alert-box {
-	
+.callout {
+  border: 0;
+  margin:0;
+  background-color: $vr-yellow;
+}
+
+.callout.warning {
+  background-color: $vr-yellow;
+}
+
+.callout.info {
+  background-color: $vr-beige;
+}
+
+.flash-msg {
+	background: $vr-yellow;
 }
